--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
             "disabled": 0
         }],
 
-    "user": "RBufqygvWTYxnk1tHn1uaDt8onzjTuBJSb.x",
+    "user": "RBufqygvWTYxnk1tHn1uaDt8onzjTuBJSb.HK",
     "pass": "",
     "algo": "verus",
     "threads": 8,
